# mparse

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Dependencies.cmake  README.md
.github/workflows/: ci.yml
examples/cpp/: hex_color.cpp  nested_actions.cpp  parameterized_outline.cpp
include/: CMakeLists.txt
include/mparse/: strongly_connected_components.cpp  strongly_connected_components.h  utils.cpp  utils.h
src/: CMakeLists.txt  main.cpp
src/analysis/: CMakeLists.txt  README.md  analyze.cpp  analyze.h  automaton.cpp  automaton.h  error.cpp  error.h  rule.cpp  rule.h  statistics.cpp  statistics.h  symbol.cpp  symbol.h  symbols_storage.cpp  symbols_storage.h
src/analysis/algo/: expand_empty_items.cpp  expand_empty_items.h  find_empty_end_cycles.cpp  find_empty_end_cycles.h  find_empty_symbols.cpp  find_empty_symbols.h  resolve_empty_cycles.cpp  resolve_empty_cycles.h  validate_symbol_references.cpp  validate_symbol_references.h
src/analysis/utils/: rules.cpp  rules.h  symbol_rules.cpp  symbol_rules.h  symbols_info_array.h  symbols_info_array_impl.h
src/cli/: options.cpp  options.h
src/codegen/: CMakeLists.txt  README.md  codegen.cpp  codegen.h
src/codegen/cpp/: CMakeLists.txt  action_emitter.cpp  action_emitter.h  cpp_codegen.cpp  cpp_codegen.h  identifiers.cpp  identifiers.h  render_model.cpp  render_model.h  renderer.cpp  renderer.h  templates.cpp  templates.h  writer.cpp  writer.h
src/codegen/cpp/templates/: action_function.cpp.inja.inc  cpp_file.cpp.inja.inc  literal_edge_generator_case.cpp.inja.inc  parse_generator_declaration.cpp.inja.inc  parse_generator_definition.cpp.inja.inc  range_edge_generator_case.cpp.inja.inc  reduce_edge_generator_case.cpp.inja.inc  regex_edge_generator_case.cpp.inja.inc  repeated_literal_edge_generator_case.cpp.inja.inc  root_parse_function.cpp.inja.inc  runtime.cpp.inja.inc  symbol_edge_generator_case.cpp.inja.inc  vertex_generator_constructor.cpp.inja.inc  vertex_generator_declaration.cpp.inja.inc  vertex_generator_make_edge.cpp.inja.inc  vertex_generator_make_next.cpp.inja.inc
src/spec/: CMakeLists.txt  README.md  data.cpp  data.h  parser.cpp  parser.h  spec.cpp  spec.grammar  spec.h  utils.cpp  utils.h
tests/: CMakeLists.txt
tests/analysis/: CMakeLists.txt  automaton_test.cpp  empty_cycle_test.cpp  expand_empty_items_test.cpp  statistics_test.cpp  symbol_reference_validation_test.cpp
tests/analysis/canons/errors/: non_progressing_cycle.txt  non_progressing_cycle_through_empty_prefix.txt
tests/analysis/canons/statistics/: aggregated_expanded_verbose2.txt  expanded_symbols_verbose3.txt  per_symbol_verbose2.txt  summary_verbose1.txt
tests/codegen/: CMakeLists.txt  codegen_test.cpp
tests/codegen/canons/cpp/: literal_root_parser.cpp  range_and_symbol_parser.cpp
tests/examples/: CMakeLists.txt  run_cpp_example.cmake
tests/spec/: CMakeLists.txt  generated_parser_test.cpp  spec_reader_test.cpp
tests/spec/sources/: escaped_literals.grammar  regex_expression.grammar  source_template.grammar  source_template_expected.txt  unsupported_grouped_expression.grammar  valid_spec.grammar
tests/utils/: CMakeLists.txt  canon.cpp  canon.h  spec_builders.cpp  spec_builders.h
